[package]
name = "article"
version = "0.1.0"
authors = ["wangchen <18511635784@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

chrono = {version = "0.4.10", features = ["serde"]}
snowflake-rust = "0.5.5"

rustorm = {version = "0.16.0", features= ["with-postgres"]}