[package]
name = "article"
version = "0.1.0"
authors = ["wangchen <18511635784@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

chrono = {version = "0.4.10", features = ["serde"]}
snowflake-rust = "0.5.5"

rustorm = {version = "0.16.0", features= ["with-postgres"]}